refactor: add deployment namespace and remove namespace from url's in REST endpoints
